--- a/collaboration.html
+++ b/collaboration.html
@@ -49,6 +49,52 @@
 
 
 
+<div class="containerpartener">
+<img class="imgers" src="src/img/Hero-Service-Background.png" alt="imagine gresie si faianta " >
+<div class="contaienrpp">
+<h1>Partener Collaboration</h1>
+<p>Home/Partener</p>
+</div>
+</div>
+
+
+
+<div class="containercol">
+
+<h1 class="h1-col">Collaboration</h1>
+<p class="p-col">Collaboration Partnership, we as a company have different commissions
+     with certain companies, you will save money, through me I can help
+      you save some money, materials such as tiles, we use rubi, virginia
+       tile, Deltile, Genesis tile, Flor&decor, all of these are companies
+        we collaborate with on the tools side, we use milwaukeetool dewalt,
+         Raimoundi as bonding adhesive, we use Laticrete so that the tiles 
+         are straight, we use tools from the stable, so that the water will 
+         not run and in other rooms we use Mapei, to there are no cracks, 
+    we use the Schluter system, and from them we also use profiles and many 
+    others</p>
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 <!-------------------------footer ----------------------->
